# CoreIni

./: CMakeLists.txt
CoreIni/: CoreIni.h
CoreIni/include/: CoreIni_Utils.h  Ini.h
CoreIni/src/: Ini.cpp
